--- a/src/styles.css
+++ b/src/styles.css
@@ -17,10 +17,10 @@ body {
   box-shadow: 7px 6px 28px 1px rgba(0, 0, 0, 0.25);
 }
 li {
+  text-align: center;
   list-style: none;
   padding: 1rem;
   border: 1px solid #d1d5db;
-  width: 70%;
   margin: 1rem 0rem;
   border-radius: 0.5rem;
 }
